objects/nFORCE__Option__c.object
<CustomObject>
    <description>Answer options for the questionnaire framework.</description>
    <fields>
        <fullName>nFORCE__Api_Value__c</fullName>
        <description>The field is optional. If populated this value will be included in payloads that are sent to external system</description>
        <label>Api Value</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>nFORCE__Is_Default__c</fullName>
        <defaultValue>false</defaultValue>
        <description>This field is optional. The admin populates it via the Questionnaire Admin. If true this value will be selected as the default selection.</description>
        <label>Is Default?</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>nFORCE__Label__c</fullName>
        <description>This field is required. The admin populates it via the Questionnaire Admin. It is the abel displayed to the user while viewing the possible options of a question.</description>
        <label>Label</label>
        <length>255</length>
        <required>true</required>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>nFORCE__Order__c</fullName>
        <description>This field is required. The admin populates it via the Questionnaire Admin. It is the order in which the options display for a question.</description>
        <label>Order</label>
        <precision>9</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>nFORCE__Question__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>This field is required. It is automatically set when the admin creates an option in the Questionnaire Admin. It relates an option to a question.</description>
        <label>Question</label>
        <referenceTo>nFORCE__Question__c</referenceTo>
        <relationshipLabel>Options</relationshipLabel>
        <relationshipName>Options</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>nFORCE__lookupKey__c</fullName>
        <description>The field is optional. If populated the value must be unique across all the records of this type. The field typically contains an external identifier that is used to associate the record with its matching record in an external system. The field can also be used to efficiently associate related records, when importing data into nCino, without the need to know the internal ID for the record. For more information, refer to https://developer.salesforce.com/docs/atlas.en-us.apexcode.meta/apexcode/langCon_apex_dml_nested_object.htm.</description>
        <externalId>true</externalId>
        <label>lookupKey</label>
        <length>255</length>
        <type>Text</type>
        <unique>true</unique>
    </fields>
    <label>Option</label>
    <listViews>
        <fullName>nFORCE__All</fullName>
        <filterScope>Everything</filterScope>
        <label>All</label>
    </listViews>
    <nameField>
        <displayFormat>O-{000000}</displayFormat>
        <label>Option Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Options</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>